# curencies

./: .gitignore  DEPLOYMENT.md  FIXES_APPLIED.md  FOREX_MARKET_HOURS.md  Finance_Observer_API.postman_collection.json  LOG_ANALYSIS_WORKAROUNDS.md  PROJECT_STRUCTURE.md  README.md  UI_DEVELOPMENT_PROMPT.md  alerts.py  client.html  config.json  debug_selectors.py  diagnose_commodities.py  logs.txt  main.py  monitor.sh  nixpacks.toml  observer.py  pyproject.toml  requirements.txt  run_uvicorn.py  sword psql -h localhost -U myuser -d commodities --no-align --tuples-only -c SELECT DISTINCT pair FROM historical_prices WHERE pair LIKE '-USD' ORDER BY pair LIMIT 10;  test_extraction.py  test_forex_market_hours.py  test_ohlc_diagnostic.py
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: alerts.py  data.py
app/core/: config.py
app/crud/: __init__.py
app/db/: __init__.py
app/models/: __init__.py  historical.py
app/schemas/: __init__.py  alert.py  history.py  ohlc.py  responses.py
app/services/: __init__.py  alert_service.py  call_service.py  email_service.py  observer_service.py  postgres_service.py  redis_service.py  sms_service.py
app/tests/: test_candle_alerts.py  test_data_endpoint_integration.py  test_observer_commodities_parsing.py  test_ohlc_bucketing.py  test_pair_normalizer.py
app/utils/: __init__.py  forex_market_hours.py  pair_normalizer.py
