[project]
name = "finance-observer"
version = "1.0.0"
description = "Real-time forex currency pair price monitoring"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.0",
    "playwright==1.48.0",
    "websockets==12.0",
    "africastalking",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
